2013-11-01  Werner Lemberg  <wl@gnu.org>

	[ttdebug] Make `p' set a breakpoint at previous position.

	* src/ttdebug.c (RunIns): Store information about last position in
	`last_IP' and `last_range'.
	<'h'>, <'c'>, <'f'>, <'n'>, <'s'>: Updated.
	<'p'>: Set breakpoint at previous instruction.

2013-10-31  Werner Lemberg  <wl@gnu.org>

	[ttdebug] Minor.

	* src/ttdebug.c: Make full-sentence messages where appropriate.
	(RunIns): Make help screen more compact vertically.

2013-10-31  Werner Lemberg  <wl@gnu.org>

	[ttdebug] Make `b' set a breakpoint.

	* src/ttdebug.c (Breakpoint): New structure.
	(RunIns): Handle breakpoint.
	<'h'>, <'c'>, <'f'>, <'n'>: Updated.
	<'b'>: Set breakpoint.

2013-10-31  Werner Lemberg  <wl@gnu.org>

	[ttdebug] Improve help; add key `h' to show it.

	* src/ttdebug.c (RunIns) <'?'>: Update and redesign help screen.
	<'h'>: Same as key `?'.
	(main): Show version string and help info at start-up.

2013-10-31  Werner Lemberg  <wl@gnu.org>

	[ttdebug] Make key `R' restart the debugger.

	* src/ttdebug.c (Restart): New macro.
	(RunIns) <'Q'>: Set `pedantic_hinting' flag.
	<'R'>: Set error to `Restart'.
	(main): Add loop.

2013-10-30  Werner Lemberg  <wl@gnu.org>

	[ttdebug] Make key `f' finish current function.
	Change old `f' key to `F'.

	* src/ttdebug.c (RunIns)
	<'f'>: Renamed to ...
	<'F'>: ... this.
	<'f'>: Loop until current function is finished.
	<'?'>: Updated.

2013-10-28  Werner Lemberg  <wl@gnu.org>

	Add manual pages.
	Originally contributed (but heavily modified) by Nis Martensen
	<nis.martensen@web.de>.

	* src/ftbench.1, src/ftdiff.1, src/ftdump.1, src/ftgamma.1,
	src/ftgrid.1, src/ftlint.1, src/ftmulti.1, src/ftstring.1,
	src/ftvalid.1, src/ftview.1: New files.

2013-10-28  Werner Lemberg  <wl@gnu.org>

	[ftbench, ftmulti, ftvalid] Improve and correct usage output.

	This commit also changes key mappings in ftvalid ('L' -> 'l', 'v' ->
	'V'), adds option -v to display the version, and removes dead code.
